# PreviewGram

./: README.md  requirements.txt  setup.cfg  test_application.py
src/: __init__.py  main.py
src/data/: index.html
src/model/: __parser__.py  db.py  page.py
src/ui/: channel.py  ui.py
src/ui/components/: add_channel.py  chan_list.py  engine.py  top_bar.py
