[metadata]
name = Private PreviewGram
version = 1.1
description = PreviewGram is for users that wants get a more private experience with the Telegrams Channel.
author = RickBarretto


[options]
packages = 
    src
    src.model
    src.ui
    src.ui.components
include_package_data = True
install_requires = 
    pip >= "21.3.1";python_version >= "3.10.0"
    PySide6>= "6.2.1"

python_requires >= 3.10

[options.entry_points]
console_scripts = 
    wpp = src:start_app